Disabled autocorrect on tag-suggestion-enabled fields

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<label id="note-form-content-label" for="content">Note</label>
 					<textarea id="note-form-content" name="content"></textarea>
 					<label id="note-form-tags-label" for="tags">Tags (optional)</label>
-					<input id="note-form-tags" type="text" name="tags" />
+					<input id="note-form-tags" autocorrect="off" type="text" name="tags" />
 					<div id="note-form-tags-suggestions" class="tag-suggestions">
 						<ul data-role="listview">
 						</ul>
@@ -203,7 +203,7 @@
             <div data-role="content">
                 <form id="options-reports-form" action="#options-reports-results" method="post">
                     <label id="options-reports-form-tags-label" for="tags">View all notes tagged with</label>
-                    <input id="options-reports-form-tags" type="text" name="tags" />
+                    <input id="options-reports-form-tags" autocorrect="off" type="text" name="tags" />
 					<div id="options-reports-form-tags-suggestions" class="tag-suggestions">
 						<ul data-role="listview">
 						</ul>
