--- a/index.html
+++ b/index.html
@@ -313,13 +313,13 @@
 				<form id="options-manage-tags-view-form" data-direction="reverse" action="#options-manage-tags-view-form" method="post">
 					<input id="options-manage-tags-view-form-tag-id" type="hidden" name="tag-id" />
 					<label id="options-manage-tags-view-form-tag-name-label" for="tagName">Tag name</label>
-					<input id="options-manage-tags-view-form-tag-name" type="text" name="tagName" />
-					<div class="ui-grid-b">
-                        <div class="ui-block-a"><a id="options-manage-tags-view-form-button-back" data-role="button" data-direction="reverse" href="#options-manage-tags">Cancel</a></div>
-						<div class="ui-block-b"><input type="submit" value="Save" /></div>
-						<div class="ui-block-c"><a id="options-manage-tags-view-form-button-delete" data-role="button" href="">Delete</a></div>
-					</div><!-- /ui-grid-b -->					
+					<input id="options-manage-tags-view-form-tag-name" type="text" name="tagName" />					
 				</form>
+                <div class="ui-grid-b">
+                    <div class="ui-block-a"><a id="options-manage-tags-view-button-back" data-role="button" data-direction="reverse" href="#options-manage-tags">Cancel</a></div>
+                    <div class="ui-block-b"><a id="options-manage-tags-view-button-submit" data-role="button" href="">Submit</a></div>
+                    <div class="ui-block-c"><a id="options-manage-tags-view-button-delete" data-role="button" href="">Delete</a></div>
+                </div><!-- /ui-grid-b -->
 			</div><!-- /content -->
 		</div><!-- /page -->
 		<!-- /OPTIONS MANAGE TAGS VIEW -->
