--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				</form>
                 <div class="ui-grid-b">
                     <div class="ui-block-a"><a id="options-manage-tags-view-button-back" data-role="button" data-direction="reverse" href="#options-manage-tags">Cancel</a></div>
-                    <div class="ui-block-b"><a id="options-manage-tags-view-button-submit" data-role="button" href="">Submit</a></div>
+                    <div class="ui-block-b"><a id="options-manage-tags-view-button-save" data-role="button" href="">Save</a></div>
                     <div class="ui-block-c"><a id="options-manage-tags-view-button-delete" data-role="button" href="">Delete</a></div>
                 </div><!-- /ui-grid-b -->
 			</div><!-- /content -->
