Optomized cora.suggestTags to use IDs and only look up element once

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<label id="note-form-tags-label" for="tags">Tags (optional)</label>
 					<input id="note-form-tags" autocorrect="off" type="text" name="tags" />
 					<div id="note-form-tags-suggestions" class="tag-suggestions">
-						<ul data-role="listview">
+						<ul id="note-form-tags-suggestions-list" data-role="listview">
 						</ul>
 					</div>
 					<label id="note-form-content-label" for="content">Note</label>
