--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 				<a class="ui-btn-left" data-icon="home" data-iconpos="notext" data-direction="reverse" href="#home">Home</a>
 			</div><!-- /header -->
 			<div data-role="content">
-				<div class="note-header">
-					<p class="note-student"></p>
-					<p class="note-created"></p>
-					<p class="note-tags"></p>
+				<div id="note-header">
+					<p id="note-student"></p>
+					<p id="note-created"></p>
+					<p id="note-tags"></p>
 				</div>
-				<p class="note-content"></p>
+				<p id="note-content"></p>
 				<div class="ui-grid-b">
 					<div class="ui-block-a"><a id="note-button-back" data-role="button" data-direction="reverse" href="#student">Back</a></div>
 					<div class="ui-block-b"><a id="note-button-edit" data-role="button" direction="forward" href="#note-form">Edit</a></div>
