Forgot to include index.html in commit acb70f8

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <label id="options-reports-form-tags-label" for="tags">View all notes tagged with</label>
                     <input id="options-reports-form-tags" autocorrect="off" type="text" name="tags" />
 					<div id="options-reports-form-tags-suggestions" class="tag-suggestions">
-						<ul data-role="listview">
+						<ul id="options-reports-form-tags-suggestions-list" data-role="listview">
 						</ul>
 					</div>
 					<div class="ui-grid-a">
